--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,17 +16,7 @@
 
 html,
 body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden;
   color: var(--foreground);
-  background: var(--background);
+  background: #1a1a1a;
   font-family: Arial, Helvetica, sans-serif;
 }
-/* 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-} */
